[gd_scene load_steps=11 format=3 uid="uid://chp5uldqh6j63"]

[ext_resource type="Texture2D" uid="uid://1i7dita7s7w1" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="1_ca1o5"]
[ext_resource type="Texture2D" uid="uid://dgexmau4lt6sy" path="res://assets/hdris/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_ftsjl"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="3_e87nl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g4rmi"]
albedo_texture = ExtResource("1_ca1o5")
uv1_triplanar = true

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_yjj31"]
panorama = ExtResource("2_ftsjl")

[sub_resource type="Sky" id="Sky_6qhia"]
sky_material = SubResource("PanoramaSkyMaterial_yjj31")

[sub_resource type="Environment" id="Environment_hwjs6"]
background_mode = 2
sky = SubResource("Sky_6qhia")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ct7yr"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gcx35"]
height = 1.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y6w6v"]
height = 1.3

[node name="world" type="Node3D"]

[node name="stage" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="stage"]
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_g4rmi")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_hwjs6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.322056, 0)
script = ExtResource("3_e87nl")

[node name="neck" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
visible = false

[node name="head" type="Node3D" parent="player/neck"]

[node name="eyes" type="Node3D" parent="player/neck/head"]

[node name="Camera3D" type="Camera3D" parent="player/neck/head/eyes"]
fov = 90.0

[node name="standing_coll_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_ct7yr")

[node name="crouching_coll_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.827338, 0)
visible = false
shape = SubResource("CapsuleShape3D_gcx35")
disabled = true

[node name="crouchjump_coll_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32916, 0)
visible = false
shape = SubResource("CapsuleShape3D_y6w6v")
disabled = true

[node name="headbonk_raycast" type="RayCast3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.004, 0.227531, 0.004)
visible = false
target_position = Vector3(0, 2, 0)

[node name="crouchjump_raycast" type="RayCast3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.977, 0)
visible = false
target_position = Vector3(0, -1.8, 0)
